Use non-deprecated API for Class#newInstance.